# amenity-stuff

./: .gitignore  AGENTS.md  CLAUDE.md  EXTRACTORS.md  LICENSE  PROJECT_SPEC.md  README.md  SPECIFICHE_PROGETTO.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
archiver/: __main__.py  analyzer.py  app.py  archive_apply.py  cache.py  cache_overlay.py  config.py  discovery.py  filetypes.py  help_screen.py  item_mutations.py  llm_backend.py  model_selection.py  normalizer.py  office_extract.py  ollama_client.py  open_file.py  pdf_extract.py  perf_report.py  prompts.py  scanner.py  settings.py  settings_screen.py  setup_logic.py  setup_screen.py  task_builders.py  taxonomy.py  text_extract.py  ui_details.py  ui_files_table.py  ui_runtime.py  ui_status.py  utils_filename.py  utils_json.py  utils_parsing.py
archiver/extractors/: __init__.py  image.py  office.py  pdf.py  registry.py  textish.py  textish_csv.py  textish_gpx.py  textish_html.py  textish_kmz.py  textish_rtf.py  textish_svg.py  textish_yaml.py  types.py  utils_text.py
archiver/taxonomies/: en.txt  it.txt
archiviatore_tui/: __main__.py  analyzer.py  app.py  archive_picker_screen.py  cache.py  config.py  confirm_screen.py  discovery.py  help_screen.py  model_selection.py  normalizer.py  ollama_client.py  pdf_extract.py  scanner.py  settings.py  settings_screen.py  setup_screen.py  task_builders.py  task_state.py  taxonomy.py  ui_details.py  ui_status.py  utils_json.py
scripts/: bump_version.py
