[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amenity-stuff"
version = "0.9.5"
description = "Terminal UI to analyze and organize files using a local LLM (Ollama)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "amenity-stuff contributors"}]
dependencies = [
  "textual>=0.60,<1",
  "pypdf>=4,<6",
  "pymupdf>=1.24,<2",
  "pytesseract>=0.3,<1",
  "Pillow>=10,<12",
]

[project.urls]
Repository = "https://github.com/elmisi/amenity-stuff"

[project.scripts]
amenity-stuff = "archiver.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["archiver*"]
